--- a/videos/templates/video.html
+++ b/videos/templates/video.html
@@ -10,6 +10,7 @@
     
       <video id="video" class="embed-responsive-item" controls autoplay>
         <source id="src_video" src="{{video.md}}"> Your browser does not support the video tag.
+        <track label="Français" kind="subtitles" srclang="fr" src="{% static "admin/test_subtitle.vtt" %}" default >
       </video> 
     
     
