--- a/videos/templates/block_video_proj_liste.html
+++ b/videos/templates/block_video_proj_liste.html
@@ -121,6 +121,12 @@
             {% endif %}
 
              </div>
+
+            {% if description %}
+             <div style="font-size:11px;color:rgb(118, 118, 118);">
+                {{elmt.description}}
+              </div>
+            {% endif %}
         {% if horizontal %}
             </div></div>
     {% endif %}
