--- a/videos/templates/proj_new.html
+++ b/videos/templates/proj_new.html
@@ -445,7 +445,7 @@ function launch(id) {
 
   document.getElementById('lien_precedente').onclick=function(){ launch(Math.max(1,current-1)) };
   document.getElementById('lien_suivante').onclick=function(){ launch(Math.min(playlist.length-1,current+1)) };
-  document.getElementById('lien_en_cours_solo').href='/jtx/video/'+playlist[current][3].toString();
+  document.getElementById('lien_en_cours_solo').href='/video/'+playlist[current][3].toString();
 }
 
 video.addEventListener('ended',next,false);
