refonte de la page jtx, truc mythe en dev encore

--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -270,7 +270,7 @@
                     {% if titre_tag %}
                     <div class="card">
                       <div class="card-header" >
-                        <h2 class="">Tag affiché : <span class="tag">{{titre}}</span></h2>
+                        <h2 class="">Tag affiché : <span class="tag" style="font-size:20px;">{{titre}}</span></h2>
                       </div>
                       <div class="card-body container-fluid" style="background-color:white;">
 
